<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".features.navigation.FirstActivity">

	<com.google.android.material.appbar.MaterialToolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/light_gray"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:navigationIcon="@drawable/ic_arrow_left"
		app:title="Segunda Tela" />

	<androidx.appcompat.widget.LinearLayoutCompat
		android:id="@+id/content"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:gravity="center"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@id/button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/toolbar">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/input_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="24dp"
			android:layout_marginTop="14dp"
			android:hint="@string/input_value_text"
			app:layout_constraintBottom_toTopOf="@id/content_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<LinearLayout
			android:id="@+id/content_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent">

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/first_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="24dp"
				android:layout_marginTop="8dp"
				android:gravity="center"
				tools:text="@string/first_screen_text_input_intent" />

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/third_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="24dp"
				android:layout_marginTop="8dp"
				android:gravity="center"
				tools:text="@string/third_screen_text_input_result" />
		</LinearLayout>


	</androidx.appcompat.widget.LinearLayoutCompat>

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:text="@string/continue_to_third_screen"
		android:textAllCaps="false"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
